# Social-Media-Agent

./: .env.example  .gitignore  API_DOCUMENTATION.md  ASYNC_FIX_COMPLETE.md  BM25_FIX_APPLIED.md  DEBUG_IMPROVEMENTS_APPLIED.md  DEPLOYMENT_GUIDE.md  EMPTY_GENERATION_ISSUE_RESOLVED.md  FINAL_FIX_SUMMARY.md  IMAGE_GENERATION_GUIDE.md  INDEXING_COMPLETE.md  INTERACTIVE_FLOW_UPDATE.md  NEMOTRON_CONTEXT_FIX.md  QUICKSTART.md  RAG_ENV_VARIABLES.md  RAG_IMPLEMENTATION_COMPLETE.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_QUICK_START.md  README.md  TELEGRAM_HITL_GUIDE.md  TELEGRAM_POLLING_FIX.md  TELEGRAM_SETUP.md  pyproject.toml  social_media_agent.db
dataset_annotated/: metadata.jsonl
deploy/: nginx.conf  setup.sh  social-media-agent.service
scripts/: __init__.py  annotate_dataset.py  train_flux_model.py
src/: __init__.py  database.py  hitl_approval.py  image_client.py  llm_client.py  main.py  mastodon_client.py  models.py  notion_client.py  post_generator.py  reply_generator.py  scheduler.py  schemas.py  telegram_client.py
src/api/: main.py
src/api/routes/: config.py  listeners.py  posts.py  rag.py  schedule.py
src/listeners/: __init__.py  manager.py  mastodon_listener.py  notion_listener.py
src/rag/: __init__.py  bm25_search.py  chunker.py  context_builder.py  embedder.py  feedback_loop.py  indexer.py  query_parser.py  retriever.py  vector_search.py  vector_store.py
src/workflows/: __init__.py
tests/: __init__.py
